# distributed-downloader

./: .gitignore  .zenodo.json  CITATION.cff  README.md  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: validate-zenodo.yaml
config/: downloader.yaml  example_config.yaml  hpc.env
docs/: process_README.md  scripts_README.md  structure_README.md  troubleshooting_README.md
docs/example_output/: inner_checkpoint.yaml  servers_profiles.csv
docs/example_output/logs/: initialization.err
docs/example_output/logs/0001/: schedule_creation.err
docs/example_output/logs/0001/0000/0000/: server_downloading.err
docs/example_output/logs/0001/0000/0001/: server_verifying.err
docs/example_output/logs/current/: schedule_creation.err
docs/example_output/logs/current/0000/0000/: server_downloading.err
docs/example_output/logs/current/0000/0001/: server_verifying.err
docs/example_output/schedules/0001/0000/: 0000.csv  _jobs_ids.csv  _verification.csv
docs/example_output/schedules/current/0000/: 0000.csv  _config.csv  _jobs_ids.csv
docs/example_output/servers_batched/server_name=content.eol.org/partition_id=0/: .part-00000-03a552af-39ca-4b99-997b-360ab096fffc.c000.snappy.parquet.crc  part-00000-03a552af-39ca-4b99-997b-360ab096fffc.c000.snappy.parquet
example_config/: hpc.env  osc.env
example_scripts/: server_downloading.slurm  server_downloading_prep.slurm  server_verifing.slurm  submit_mpi_download.sh  submit_slurm.sh
examples/: ignored_servers.csv
scripts/: general_submit.sh  initialization.slurm  profiling.slurm  resize_mpi.slurm  schedule_creation.slurm  server_downloading.slurm  server_downloading_prep.slurm  server_prep.slurm  server_profiling.slurm  server_verifying.slurm  submit_mpi_download.sh  submit_schedule_creator.sh  submit_slurm.sh  tools_filter.slurm  tools_scheduler.slurm  tools_submit.sh  tools_verifier.slurm  tools_worker.slurm
src/: MPI_download_prep.py  MPI_downloader_verifier.py  MPI_multimedia_downloader.py  MPI_multimedia_downloader_controller.py  MPI_server_profiler.py  MPI_server_profiler_controller.py  actual_filtering.py  compute_hashsum.py  data_transfer.py  image_verification.py  image_verification_scheduler.py  name_table_creation.py  resize_mpi.py  resizer_scheduler.py  server_prep.py  submitter.py
src/distributed-downloader/: MPI_download_prep.py  MPI_multimedia_downloader.py  MPI_multimedia_downloader_controller.py  MPI_server_profiler.py  MPI_server_profiler_controller.py  __main__.py
src/distributed-downloader/mpi_downloader/: PreLoader.py  ProfilerWriter.py  utils.py
src/distributed_downloader/: MPI_download_prep.py  MPI_downloader_verifier.py  MPI_multimedia_downloader.py  MPI_multimedia_downloader_controller.py  MPI_server_profiler.py  MPI_server_profiler_controller.py  __init__.py  fake_profiler.py  initialization.py  main.py  submitter.py  utils.py
src/distributed_downloader/core/: MPI_download_prep.py  MPI_downloader_verifier.py  MPI_multimedia_downloader.py  MPI_multimedia_downloader_controller.py  __init__.py  eol_initialization.py  fake_profiler.py  fathom_net_initialization.py  initialization.py  lila_initialization.py  main.py  utils.py
src/distributed_downloader/core/initializers/: README.md  base_initializer.py  eol_initializer.py  fathom_net_initializer.py  gbif_initializer.py  lila_initializer.py  tol_fathomNet_initializer.py  tol_general_initializer.py
src/distributed_downloader/core/mpi_downloader/: DirectWriter.py  Downloader.py  PreLoader.py  dataclasses.py  utils.py
src/distributed_downloader/mpi_downloader/: DirectWriter.py  ProfilerWriter.py  dataclasses.py  utils.py
src/distributed_downloader/tools/: __init__.py  checkpoint.py  config.py  filter.py  filters.py  main.py  registry.py  runner.py  runners.py  scheduler.py  schedulers.py  utils.py  verification.py
src/distributed_downloader/tools/config_templates/: downloader.yaml  tools.yaml
src/distributed_downloader/utils/: utils.py
src/mpi_downloader/: DirectWriter.py  Downloader.py  PreLoader.py  ProfilerWriter.py  __init__.py  dataclasses.py  utils.py
src/schemes/: multimedia_scheme.py
src/tools/: Checkpoint.py  __init__.py  config.py  filter.py  filters.py  main.py  registry.py  runner.py  runners.py  scheduler.py  schedulers.py  tools_base.py  verification.py
src/utils/: utils.py
tools/: actual_filtering.py  actual_filtering_research.py  actual_filtering_scheduler.py  data_merging.py  data_merging_name_table.py  data_merging_scheduler.py  data_transfer.py  duplicates_based.py  image_verification.py  image_verification_scheduler.py  merging_duplicates_based.py  name_table_creation.py  resize_mpi.py  resizer_scheduler.py  size_based.py  verification_attempt.py
